--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "electron-builder": "^24.13.3",
     "lightningcss-win32-x64-msvc": "^1.30.1",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12",
+  "tailwindcss": "^4.1.12",
+  "@tailwindcss/oxide-win32-x64-msvc": "^4.1.12",
     "typescript": "^5.9.2",
     "vite": "^7.0.0",
     "wait-on": "^8.0.4"
@@ -55,16 +56,20 @@
       "target": [
         "nsis",
         "portable"
-      ],
-      "artifactName": "${productName}-${version}-${arch}.${ext}"
+      ]
     },
     "nsis": {
       "oneClick": true,
       "perMachine": false,
       "allowToChangeInstallationDirectory": false,
       "createDesktopShortcut": true,
-      "createStartMenuShortcut": true
-    }
+      "createStartMenuShortcut": true,
+      "artifactName": "${productName}-Setup-${version}-${arch}.exe"
+    },
+    "portable": {
+      "artifactName": "${productName}-Portable-${version}-${arch}.exe"
+    },
+    
   },
   "overrides": {
     "@electron/get": "2.0.3",
