--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "electron-builder": "^24.13.3",
     "lightningcss-win32-x64-msvc": "^1.30.1",
     "postcss": "^8.5.6",
-  "tailwindcss": "^4.1.12",
-  "@tailwindcss/oxide-win32-x64-msvc": "^4.1.12",
+    "tailwindcss": "^4.1.12",
+    "@tailwindcss/oxide-win32-x64-msvc": "^4.1.12",
     "typescript": "^5.9.2",
     "vite": "^7.0.0",
     "wait-on": "^8.0.4"
@@ -53,6 +53,7 @@
       "!stubs/**"
     ],
     "win": {
+      "artifactName": "${productName}-Setup-${version}-${arch}.exe",
       "target": [
         "nsis",
         "portable"
@@ -68,8 +69,7 @@
     },
     "portable": {
       "artifactName": "${productName}-Portable-${version}-${arch}.exe"
-    },
-    
+    }
   },
   "overrides": {
     "@electron/get": "2.0.3",
