feat: add icon generation scripts and update icon files for timer application

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
       "target": [
         "nsis",
         "portable"
-      ]
+      ],
+      "icon": "build-resources/icon.ico"
     },
     "nsis": {
       "oneClick": true,
