--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@ node_modules/
 /dist/
 /out/
 /build/
-/release/
+/release/private exe files/
+/release/private yml files/
 
 npm-debug.log*
 yarn-debug.log*
